# lib/router/router.js
@@ -95,7 +95,63 @@ router.post('/api/signup', addUser)
  */
 router.post('/api/login', authenticateUser)
 
+/**
+ * @swagger
+ *
+ * /api/users:
+ *   get:
+ *     tags:
+ *      - Users
+ *     summary: Lists the users in the database
+ *     parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
+ *     produces:
+ *       - application/json
+ *     responses:
+ *       200:
+ *         description: Users in the database listed
+ */
 router.get('/api/users', getUsers)
+
+/**
+ * @swagger
+ *
+ * /api/users:
+ *   delete:
+ *     tags:
+ *      - Users
+ *     summary: Deletes the current user specified by the token
+ *     parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
+ *      - in: body
+ *        name: user
+ *        description: The credentials for login
+ *        schema:
+ *          type: object
+ *          required:
+ *            - username
+ *            - password
+ *          properties:
+ *            username:
+ *              type: string
+ *              example: Swagger
+ *            password:
+ *              type: string
+ *              example: SWAGGERswagger1@34
+ *     produces:
+ *       - application/json
+ *     responses:
+ *       200:
+ *         description: Current user deleted
+ */
 router.delete('/api/users', removeCurrentUser)
 
 // Boards APIs
@@ -131,6 +187,11 @@ router.get('/api/boards', listBoards)
  *      - Boards
  *    summary: Returns the board requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -157,6 +218,11 @@ router.get('/api/boards/:boardID', getBoardByID)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: body
  *        name: board info
  *        required: true
@@ -192,6 +258,11 @@ router.post('/api/boards', addBoard)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -231,6 +302,11 @@ router.delete('/api/boards/removeMember/:boardID-:username', removeMember)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -256,6 +332,11 @@ router.get('/api/boards/todosof/:boardID', getTodosOfBoard)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -281,6 +362,11 @@ router.get('/api/boards/ownerof/:boardID', getOwnerOfBoard)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -306,6 +392,11 @@ router.get('/api/boards/tasksof/:boardID', getTasksOfBoard)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -329,6 +420,11 @@ router.get('/api/boards/membersof/:boardID', getMembersOfBoard)
  *      - Boards
  *    summary: Updates a current board requested by id.
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -366,6 +462,11 @@ router.put('/api/boards/:boardID', updateBoard)
  *      - Boards
  *    summary: Deletes the board requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -399,6 +500,12 @@ router.get('/api/dashboard', listBoards)
  *     tags:
  *      - Todos
  *     summary: Get a list of current todos
+ *     parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *     produces:
  *       - application/json
  *     responses:
@@ -416,6 +523,11 @@ router.get('/api/todo', listTodoBoards)
  *      - Todos
  *    summary: Returns the tasks of the requested todo board
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -444,6 +556,11 @@ router.get('/api/todo/tasksof/:todoID', getTasksOfTodo)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: boardID
  *        required: true
@@ -480,6 +597,11 @@ router.post('/api/todo/:boardID', addTodo)
  *      - Todos
  *    summary: Updates a current todo board requested by id.
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -518,6 +640,11 @@ router.put('/api/todo/:todoID', updateTodoBoard)
  *      - Todos
  *    summary: Deletes the Todo board requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -545,6 +672,11 @@ router.delete('/api/todo/:todoID', removeTodoBoard)
  *      - Todos
  *    summary: Returns the Todo board requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -570,6 +702,12 @@ router.get('/api/todo/:todoID', getTodoBoardId)
  *     tags:
  *      - Tasks
  *     summary: Get a list of current tasks
+ *     parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *     produces:
  *       - application/json
  *     responses:
@@ -587,6 +725,11 @@ router.get('/api/tasks', listTasks)
  *      - Tasks
  *    summary: Returns the task requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -613,6 +756,11 @@ router.get('/api/tasks/:taskID', getTaskById)
  *    consumes:
  *      - application/json
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: todoID
  *        required: true
@@ -653,6 +801,11 @@ router.post('/api/tasks/:todoID', addTask)
  *      - Tasks
  *    summary: Updates a current task requested by id.
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -692,6 +845,11 @@ router.put('/api/tasks/:taskID', updateTask)
  *      - Tasks
  *    summary: Deletes the task requested by id
  *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
  *      - in: path
  *        name: id
  *        required: true
@@ -707,6 +865,33 @@ router.put('/api/tasks/:taskID', updateTask)
  */
 router.delete('/api/tasks/:taskID', removeTask)
 
+/**
+ * @swagger
+ *
+ * /api/tasks/assignee/{memberID}:
+ *   get:
+ *    tags:
+ *      - Tasks
+ *    summary: Gets the assignee of the task
+ *    parameters:
+ *      - in: header
+ *        name: Authorization
+ *        required: true
+ *        type: string
+ *        description: Bearer ${token recieved in login}
+ *      - in: path
+ *        name: memberID
+ *        required: true
+ *        type: string
+ *        description: The username of the task's assignee
+ *    produces:
+ *       - application/json
+ *    responses:
+ *      200:
+ *        description: Task's assignee found.
+ *      404:
+ *        description: Task was not found.
+ */
 router.get('/api/tasks/assignee/:memberID', getAssigneeOfTask)
 
 router.get('/api/tasks/allmembersof/:taskID', getAllMembersOfBoard)
